--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "proxy": "http://localhost:5001"
 }
